--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
     android:theme="@style/Theme.APStudyVoca"
     tools:targetApi="31">
     <activity
+      android:name=".ModifyWord"
+      android:exported="false" />
+    <activity
       android:name=".AddWord"
       android:exported="false" />
     <activity
