inverse로 공부하기 기능을 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
       android:name=".RandomStudy"
       android:exported="false" />
     <activity
+      android:name=".RandomStudyInverse"
+      android:exported="false" />
+    <activity
       android:name=".ModifyWord"
       android:exported="false" />
     <activity
