--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
     android:allowBackup="true"
     android:dataExtractionRules="@xml/data_extraction_rules"
     android:fullBackupContent="@xml/backup_rules"
-    android:icon="@drawable/icon_minicat"
+    android:icon="@drawable/miniicon_minicat_blue"
     android:label="@string/app_name"
-    android:roundIcon="@drawable/icon_minicat"
+    android:roundIcon="@drawable/miniicon_minicat_blue"
     android:supportsRtl="true"
     android:theme="@style/Theme.APStudyVoca"
     tools:targetApi="31">
